Closed
Bug 1298970
Opened 9 years ago
Closed 9 years ago
Move cancelBubble to Event
Categories
(Core :: DOM: Events, defect, P2)
Core
DOM: Events
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: nika, Assigned: stone)
References
Details
(Keywords: dev-doc-complete)
Attachments
(1 file, 1 obsolete file)
|
9.67 KB,
patch
|
stone
:
review+
jcristau
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
This is causing problems with selectevents enabled in OWA. See bug 1280534.
Comment 1•9 years ago
|
||
Spec bug?
Comment 2•9 years ago
|
||
This is being discussed in https://github.com/whatwg/dom/issues/211
Updated•9 years ago
|
Priority: -- → P2
Updated•9 years ago
|
Assignee: nobody → bugs
Comment 4•9 years ago
|
||
though, the spec issue is still open.
Comment 5•9 years ago
|
||
But I think we could still implement this.
| Assignee | ||
Updated•9 years ago
|
Assignee: bugs → sshih
Flags: needinfo?(sshih)
Updated•9 years ago
|
Keywords: dev-doc-needed
| Assignee | ||
Comment 6•9 years ago
|
||
Attachment #8815657 -
Flags: review?(bugs)
Comment 7•9 years ago
|
||
Comment on attachment 8815657 [details] [diff] [review]
Move UIEvent.cancelBubble to Event
Thanks.
Attachment #8815657 -
Flags: review?(bugs) → review+
| Assignee | ||
Comment 8•9 years ago
|
||
| Assignee | ||
Comment 9•9 years ago
|
||
Updated the patch summary.
Attachment #8815657 -
Attachment is obsolete: true
Attachment #8815959 -
Flags: review+
| Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Comment 10•9 years ago
|
||
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/033d5532cac7
Move UIEvent.cancelBubble to Event. r=smaug
Keywords: checkin-needed
Comment 11•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment 12•9 years ago
|
||
[Tracking Requested - why for this release]:
This problem also happens with OWA using Firefox 52.0b1
Could this fix please be added to the 52 branch - as 52 will be the next ESR release
tracking-firefox52:
--- → ?
Comment 13•9 years ago
|
||
Comment on attachment 8815959 [details] [diff] [review]
Bug 1298970 - Move UIEvent.cancelBubble to Event.
Approval Request Comment
[Feature/Bug causing the regression]: NA, but a spec change https://github.com/whatwg/dom/issues/211
[User impact if declined]: Broken pages
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]:
I'd uplift also https://bugzilla.mozilla.org/show_bug.cgi?id=1324380
[Is the change risky?]: No
[Why is the change risky/not risky?]: The property has been in browser for ages but implemented differently. It got recently spec'ed, and this patch makes us follow the spec.
[String changes made/needed]: NA
Attachment #8815959 -
Flags: approval-mozilla-beta?
Comment 14•9 years ago
|
||
Comment on attachment 8815959 [details] [diff] [review]
Bug 1298970 - Move UIEvent.cancelBubble to Event.
follow spec change for cancelBubble attribute, beta52+
Attachment #8815959 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Updated•9 years ago
|
Comment 15•9 years ago
|
||
needs rebasing for beta
grafting 378285:033d5532cac7 "Bug 1298970 - Move UIEvent.cancelBubble to Event. r=smaug"
merging dom/events/Event.cpp
merging dom/events/Event.h
merging dom/events/test/mochitest.ini
merging dom/webidl/Event.webidl
warning: conflicts while merging dom/events/test/mochitest.ini! (edit, then use 'hg resolve --mark')
abort: unresolved conflicts, can't continue
Flags: needinfo?(sshih)
Updated•9 years ago
|
Flags: needinfo?(sshih)
Comment 16•9 years ago
|
||
| bugherder uplift | ||
status-firefox52:
--- → fixed
Flags: in-testsuite+
Comment 17•9 years ago
|
||
I've updated the affected docs pages:
https://developer.mozilla.org/en-US/docs/Web/API/UIEvent#Browser_compatibility
https://developer.mozilla.org/en-US/docs/Web/API/Event#Browser_compatibility
https://developer.mozilla.org/en-US/docs/Web/API/Event/cancelBubble
I've also added a note to the Fx53 release notes:
https://developer.mozilla.org/en-US/Firefox/Releases/53#DOM_HTML_DOM
Let me know if these changes look OK, or if anything else needs to be done (Yes, I know the Event page looks scrappy and needs cleaning up; that is a job for another day.)
Keywords: dev-doc-needed → dev-doc-complete
Comment 18•9 years ago
|
||
:cmills The spec table in https://developer.mozilla.org/en-US/docs/Web/API/Event/cancelBubble incorrectly refers to the Event interface generally instead of the Event.cancelBubble property specifically.
Comment 19•9 years ago
|
||
(In reply to Chris Rebert from comment #18)
> :cmills The spec table in
> https://developer.mozilla.org/en-US/docs/Web/API/Event/cancelBubble
> incorrectly refers to the Event interface generally instead of the
> Event.cancelBubble property specifically.
Ooops; fixed now. Thanks for spotting!
Comment 20•8 years ago
|
||
:cmills this change was pushed to Fx52 & ESR, I think it is worth updating Fx52 release note as well.
Comment 21•8 years ago
|
||
(In reply to assafdd from comment #20)
> :cmills this change was pushed to Fx52 & ESR, I think it is worth updating
> Fx52 release note as well.
Thanks for the heads up - I've updated the docs to say this happened from 52 onwards, not 53.
You need to log in
before you can comment on or make changes to this bug.
Description
•