Bug 1298970 - Move UIEvent.cancelBubble to Event. r=smaug, a=jcristau

MozReview-Commit-ID: JPc1JwfqpaZ

--HG--
extra : rebase_source : 63bab92d2fc93a0fa886cedf0c7e1bda46bd8e11
extra : source : 033d5532cac71ffdc9459fbf21f628448fac3b04